<resources>
    <!-- App -->
    <string name="app_name">Simple Mobile Chat App</string>

    <!-- General -->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>

    <!-- Login Activity -->
    <string name="app_title">SimpleGroupChat</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_to_register">Not registered? Register here.</string>

    <!-- Register Activity -->
    <string name="register_form">Registration Form</string>
    <string name="btn_register">Register</string>
    <string name="btn_link_to_login">Already registered? Login here.</string>

    <!-- Chat Activity -->
    <string name="btn_send">Send</string>

</resources>
