<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/login_bg">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <!-- Image icon of the app -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/chat_icon"
            android:layout_gravity="center_horizontal" />

        <!-- Title of the app -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textSize="35dp"
            android:textColor="@color/white"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center_horizontal"/>

        <!-- Username input box -->
        <EditText
            android:id="@+id/login_myUsernameText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:background="@drawable/inputbox_border"
            android:textColor="@color/username_text"
            android:textColorHint="@color/hint_username_text"
            android:padding="10dp"
            android:layout_marginBottom="25dp"
            android:singleLine="true"/>

        <!-- Password input box -->
        <EditText
            android:id="@+id/login_myPasswordText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/hint_password"
            android:background="@drawable/inputbox_border"
            android:textColor="@color/password_text"
            android:textColorHint="@color/hint_password_text"
            android:padding="10dp"
            android:layout_marginBottom="50dp"
            android:singleLine="true"/>

        <!-- Login Button -->
        <Button
            android:id="@+id/login_myLoginButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:background="@drawable/login_btn_shape"
            android:textColor="@color/white"
            android:width="250dp"
            android:layout_gravity="center_horizontal"/>

        <!-- Link button to register page -->
        <Button
            android:id="@+id/login_myRegisterLinkButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textColor="@color/white"
            android:textAllCaps="false" />
    </LinearLayout>

</LinearLayout>